# electron-miner

./: CMakeLists.txt  index.js  package-lock.json  package.json
nsfminer/: CMakeLists.txt  hello.cc  main.cpp
